k8s-d/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  static
  namespace: app1
  labels:
    app:  static
spec:
  selector:
    matchLabels:
      app: static
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  MYAPP
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  static
        image: 887870046594.dkr.ecr.us-west-2.amazonaws.com/static:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
