k8s-d/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-svc
  namespace: app1
spec:
  selector:
    app: static
  type: LoadBalancer
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: static
    protocol: TCP
    port: 
    targetPort: 
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort:
