k8s-d/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: IngressName
  namespace: app1
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: Service-svc
            port:
              number: 80
